Correction of some bugs on the USFestivalInPersonBookingForm